@startuml

title __HERO's Class Diagram__\n

  namespace  {
    namespace ev.fatih {
      namespace model {
        namespace hero {
          class dev.fatih.model.hero.AtlantisFactory {
              {static} ~ agilityFactor : double
              {static} ~ healthFactor : double
              {static} ~ strengthFactor : double
              + createFireHero()
              + createIceHero()
              + createNatureHero()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.fatih {
      namespace model {
        namespace hero {
          class dev.fatih.model.hero.FireHero {
              + FireHero()
              + FireHero()
              + calculateDamage()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.fatih {
      namespace model {
        namespace hero {
          abstract class dev.fatih.model.hero.Hero {
              ~ agility : int
              ~ health : int
              ~ maxHealth : int
              ~ name : String
              ~ strength : int
              + Hero()
              + Hero()
              + calculateDamage()
              + getAgility()
              + getHealth()
              + getMaxHealth()
              + getName()
              + getStrength()
              + setAgility()
              + setHealth()
              + setName()
              + setStrength()
              + takeDamage()
              + toString()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.fatih {
      namespace model {
        namespace hero {
          interface dev.fatih.model.hero.HeroFactory {
              {abstract} + createFireHero()
              {abstract} + createIceHero()
              {abstract} + createNatureHero()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.fatih {
      namespace model {
        namespace hero {
          class dev.fatih.model.hero.IceHero {
              + IceHero()
              + IceHero()
              + calculateDamage()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.fatih {
      namespace model {
        namespace hero {
          class dev.fatih.model.hero.NatureHero {
              + NatureHero()
              + NatureHero()
              + calculateDamage()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.fatih {
      namespace model {
        namespace hero {
          class dev.fatih.model.hero.UnderwildFactory {
              {static} ~ agilityFactor : double
              {static} ~ healthFactor : double
              {static} ~ strengthFactor : double
              + createFireHero()
              + createIceHero()
              + createNatureHero()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.fatih {
      namespace model {
        namespace hero {
          class dev.fatih.model.hero.ValhallaFactory {
              {static} ~ agilityFactor : double
              {static} ~ healthFactor : double
              {static} ~ strengthFactor : double
              + createFireHero()
              + createIceHero()
              + createNatureHero()
          }
        }
      }
    }
  }
  

  dev.fatih.model.hero.AtlantisFactory .up.|> dev.fatih.model.hero.HeroFactory
  dev.fatih.model.hero.FireHero -up-|> dev.fatih.model.hero.Hero
  dev.fatih.model.hero.IceHero -up-|> dev.fatih.model.hero.Hero
  dev.fatih.model.hero.NatureHero -up-|> dev.fatih.model.hero.Hero
  dev.fatih.model.hero.UnderwildFactory .up.|> dev.fatih.model.hero.HeroFactory
  dev.fatih.model.hero.ValhallaFactory .up.|> dev.fatih.model.hero.HeroFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
